--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <h1>Hello WWW!</h1>
 <p>This is a paragraph.</p>
-
+<p>Lorem ipsum dolor sit amet consectetur</p>
+<form action="">
+    <label for="">E-Mail</label>
+    <input type="text">
+</form>
 </body>
 </html>
