--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Hello WWW!</h1>
+<h1>Hello Module!</h1>
 <p>This is a paragraph.</p>
 <p>Lorem ipsum dolor sit amet consectetur</p>
 <form action="">
